# rusted-pxe

./: .gitignore  Cargo.toml
http_root/: boot.ipxe
src/: dhcp.rs  main.rs
tftp_root/: ipxe.efi  ipxe.pxe  undionly.kpxe
