[package]
name = "rusted-pxe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.9.0"
anyhow = "1.0.92"
async-tftp = "0.3.6"
dhcproto = "0.12.0"
env_logger = "0.11.5"
fern = "0.7.0"
log = "0.4.22"
tokio = { version = "1.41.0", features = ["full"] }
